[gd_scene load_steps=2 format=3 uid="uid://d0wb3v8kfao01"]

[ext_resource type="Script" uid="uid://csv64irfavmct" path="res://scripts/ui/Lobby.gd" id="1_ftocj"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_bottom = -6.10352e-05
script = ExtResource("1_ftocj")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 255.0
offset_bottom = 180.0

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 1920.0
offset_bottom = 1079.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="CollectionButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Collection"

[node name="ShopButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Store"

[node name="TradeButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Trade"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="News" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/News"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="FriendList" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 280)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/FriendList"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CollectionButton" to="." method="_on_collection_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/TradeButton" to="." method="_on_trade_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
